--- a/paquescolar-web/src/main/webapp/app/rpt03ResumenContrataciones.xhtml
+++ b/paquescolar-web/src/main/webapp/app/rpt03ResumenContrataciones.xhtml
@@ -76,6 +76,9 @@
                         <p:column headerText="#{bundle['tabla.nit']}">
                             <p:outputLabel value="#{prov.numeroNit}"/>
                         </p:column>
+                        <p:column headerText="#{bundle['tabla.proveedor']}">
+                            <p:outputLabel value="#{prov.razonSocial}"/>
+                        </p:column>
                         <p:column headerText="#{bundle['tabla.cantidad']}" styleClass="numero">
                             <p:outputLabel value="#{prov.cantidadContrato}"/>
                         </p:column>
