--- a/paquescolar-web/src/main/webapp/index.xhtml
+++ b/paquescolar-web/src/main/webapp/index.xhtml
@@ -23,7 +23,7 @@
             <div class="login-panel ui-fluid">
                 <div class="ui-g">
                     <div class="ui-g-12 logo-container">
-                        <p:graphicImage name="logo_mined.png" library="images" />
+                        <p:graphicImage name="logo_mined_rpt.png" library="images" width="180" height="112" />
                         <p:outputLabel value="Sistema de Paquetes Escolares" style="float: right; font-size: 25px; width: 230px; padding-top: 15px;  text-align: right;"/>
                     </div>
                     <div class="ui-g-12">
