--- a/paquescolar-web/src/main/webapp/app/reg07DatosDocPagoCe.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg07DatosDocPagoCe.xhtml
@@ -30,11 +30,11 @@
                         <h:outputText value="Número de Requerimiento" rendered="#{pagoProveedoresController.usuarioAdministrador}"/>
                         <p:inputMask value="#{pagoProveedoresController.numeroRequerimiento}" mask="P99-999999-99" rendered="#{pagoProveedoresController.usuarioAdministrador}"/>
                         <h:outputText value="#{bundle['ce.codEnt']}:"/>
-                        <h:panelGrid columns="3">
+                        <p:outputPanel>
                             <p:inputText value="#{pagoProveedoresController.codigoEntidad}" maxlength="5" size="6" onkeyup="queryEntidad(this.value);" onkeypress="return event.keyCode !== 13;"/>
                             <p:spacer width="10"/>
                             <p:outputLabel id="nombreCE" value="#{pagoProveedoresController.entidadEducativa.nombre}" style="font-weight: bold"/>
-                        </h:panelGrid>
+                        </p:outputPanel>
 
                         <p:commandButton value="Buscar" icon="fa fa-search" action="#{pagoProveedoresController.buscarRequerimiento}" update="pnlLstContratos"/>
                     </h:panelGrid>
